<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Other.Play"
    android:background="#505050">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/question_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:contentDescription="@string/txt_todo"
        android:scaleType="fitXY"/>
    <TextView
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:id="@+id/question_text"
        android:visibility="invisible"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingTop="10dp"
            android:id="@+id/group"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:text="@string/txt_score_0"
                    android:id="@+id/txtScore"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtTotalQuestion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/text_total_question_1_30"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />
            </LinearLayout>
            <ProgressBar
                android:max="5"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="8dp"
                android:background="#016F9B"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:id="@+id/btnAnswerA"
                android:text="@string/txt_answer_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="8dp"
                android:background="#01779B"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:id="@+id/btnAnswerB"
                android:text="@string/txt_answer_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="8dp"
                android:background="#01849B"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:id="@+id/btnAnswerC"
                android:text="@string/txt_answer_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="8dp"
                android:background="#01899B"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:id="@+id/btnAnswerD"
                android:text="@string/answer_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>