<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#505050"
    tools:context=".Other.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wrap_login"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/fightingquiz"
        android:textAllCaps="true"
        android:textColor="#838282"
        android:textSize="32sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/wrap_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_for_app"
        android:src="@drawable/kassem" />
    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/wrap_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <androidx.cardview.widget.CardView
            android:id="@id/info_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUserName"
                    android:hint="@string/hint_user_name"
                    android:textSize="24sp"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUserPassword"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="24sp"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_below="@+id/info_login"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_Login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/text_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_sign_up"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/text_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    ads:adSize="BANNER"
    ads:adUnitId="ca-app-pub-6844397703553766/4775638208">
</com.google.android.gms.ads.AdView>
</RelativeLayout>