<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Other.Done"
    android:gravity="center_vertical"
    android:background="#000000">
        <LinearLayout
            android:background="#000000"
            android:layout_margin="10dp"
            android:id="@+id/btnGroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:text="@string/scoree"
                android:fontFamily="sans-serif-medium"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:id="@+id/txtTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:text="@string/passed"
                android:fontFamily="sans-serif-medium"
                android:textStyle="italic"
                android:textAllCaps="true"
                android:id="@+id/txtTotalQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/doneProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btnTryAgain"
                android:layout_margin="8dp"
                android:background="#016F9B"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:text="@string/Again"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"/>
        </LinearLayout>
</RelativeLayout>